# jubu-deploy

./: .dockerignore  .env.template  .gitignore  DEPLOYMENT_GUIDE.md  README.md  STATS_DEPLOYMENT.md  cleanup.sh  deploy.sh  docker-compose.yml  requirements-deploy.txt  requirements-parent-api.txt
backend/: .gitignore  ARCHITECTURE.md  DEVICE_TESTING_SETUP.md  DOCUMENTATION_INDEX.md  Dockerfile  Makefile  README.md  STARTUP_GUIDE.md  SYSTEM_FLOW.md  Untitled  bot_manager.py  child_profile.json  curl_commands.txt  get_lan_ip.sh  jubu_requirements.txt  jubu_thinker.py  livekit.yaml  livekit_api.py  livekit_bot.py  pyproject.toml  pytest.ini  requirements-core.txt  requirements.txt  run_demo_backend.sh  setup.py  start_for_device.sh
backend/.github/workflows/: ci.yml  test.yml
backend/api_server/: README.md  curl_test_commands.txt  jubu_adapter.py
backend/infrastructure/logging/: __init__.py  logger.py
backend/infrastructure/storage/: file_storage.py
backend/jubu_chat/: README.md  chat_cli.py
backend/jubu_chat/configs/: base_config.yaml
backend/latency/: README.md
backend/latency/scripts/: latency_report.py  run_barge_in_test.sh  run_latency_test.sh
backend/latency/test_data/: manifest.json
backend/obsolete_jubu_datastore/: conversation_datastore.py
backend/scripts/: debug_conversations.py  get_conversation_latency_stats.py  get_conversations_by_parent_id.py  get_turns_by_child_id.py  inspect_conversation.py  restore_turns.py  show_demo_profile.py  test_streaming_tts.sh  token_debug.py
backend/speech_services/speech_to_text/: README.md  __init__.py  (+5 more)
(+100 files in other folders)
