[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | venv
  | __pycache__
  | \.mypy_cache
  | \.pytest_cache
  | evaluation/runs
  | evaluation/raw_data
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
explicit_package_bases = true
mypy_path = "."
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["jubu_chat/tests"]
python_files = "test_*.py"
python_functions = "test_*" 